aboutのviewの中身を編集

--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,8 +1,8 @@
 <div class="about-main">
-  <h2>TweetAppとは</h2>
+  <h2>OKOSHITEとは</h2>
   <p>
-    SNSサービスです。
-    近況やつぶやきを投稿し、他のユーザーと楽しくコミュニケーションできます。
+    朝起きられない人にぴったりのサービスです。
+    事前に依頼することにより朝起こしてもらうことができます。
   </p>
   <img class="about-img" src="/tweets.png">
 </div>
